// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileInjector > processFile 'README.md' { cwd: 'fixtures/no-injections', …(1) } 1`] = `
[
  [
    "_out_/README.md",
    "# Without injections

This file does not have any injections.
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'README.md' { cwd: 'fixtures/no-injections', …(1) } 2`] = `
[
  {
    "target": "stderr",
    "text": "README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/code/README.md' {} 1`] = `
[
  [
    "fixtures/code/README.md",
    "# This is a sample README

## Import Code

It contains some code:

<!--- @@inject: code.ts --->

\`\`\`ts
export function sayHello(name: string): string {
    return \`Hello \${name}\`;
}
\`\`\`

<!--- @@inject-end: code.ts --->

## Import \`json\` as \`jsonc\`

<!--- @@inject-code: sample.json#lang=jsonc --->

\`\`\`jsonc
{
    "name": "Sample"
}
\`\`\`

<!--- @@inject-end: sample.json#lang=jsonc --->

## Import Markdown as Code

It is also possible to inject markdown:

<!--- @@inject-code: example.md --->

\`\`\`markdown
# Example

This is an example bit of markdown.

- first
- second
- third
\`\`\`

<!--- @@inject-end: example.md --->

## Import a section from a Markdown file

<!--- @@inject: chapters.md#Chapter 3: Directives --->

## Chapter 3: Directives

- \`@@inject: <markdown_file.md>[#heading]\` and \`@@inject-start:  <markdown_file.md>[#heading]\` -- injects the contents of a markdown file.
  - \`<markdown_file.md>\` -- the file to import
  - \`heading\` -- optional heading to extract.
- \`@@inject: <non-markdown-file>[#lang]\`, \`@@inject-start:  <non-markdown-file>[#lang]\`, and \`@@inject-code: <file>[#lang]\`
  - \`<non-markdown-file>\`, \`<file>\` -- the file to import
  - \`lang\` -- optional language to use for the code bock.

<!--- @@inject-end: chapters.md#Chapter 3: Directives --->

## Import from lines from GitHub

<img width="711" alt="image" src="https://user-images.githubusercontent.com/3740137/210188786-28704fe3-cc2f-447c-97fc-d27715dabbdc.png">

\`\`\`
<!--- @@inject: https://github.com/streetsidesoftware/inject-markdown/blob/d7de2f5fe/src/app.mts#L15-L19 --->
\`\`\`

<!--- @@inject: https://github.com/streetsidesoftware/inject-markdown/blob/d7de2f5fe/src/app.mts#L15-L19 --->

\`\`\`typescript
async function version(): Promise<string> {
    const pathSelf = fileURLToPath(import.meta.url);
    const pathPackageJson = path.join(path.dirname(pathSelf), '../package.json');
    const packageJson = JSON.parse(await fs.readFile(pathPackageJson, 'utf8'));
    return (typeof packageJson === 'object' && packageJson?.version) || '0.0.0';
\`\`\`

<!--- @@inject-end: https://github.com/streetsidesoftware/inject-markdown/blob/d7de2f5fe/src/app.mts#L15-L19 --->

## GitHub Footnote

|        | version | Node | Support               | End-Of-Life |
| :----- | :------ | :--- | :-------------------- | :---------- |
| cspell | 6.x     | 14.x | In Active Development | TBD         |
| cspell | 5.x     | 12.x | Paid support only[^1] | 2022-10-01  |
| cspell | 4.x     | 10.x | Paid support only[^1] | 2022-05-01  |

[^1]: [Support - Street Side Software](https://streetsidesoftware.com/support/#maintenance-agreements)
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/code/README.md' {} 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/code/README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/code/frontmatter.md' {} 1`] = `
[
  [
    "fixtures/code/frontmatter.md",
    "---
title: Frontmatter Example
description: 'An example with inject and Frontmatter'
permalink: /
---

## Import Markdown as Code

It is also possible to inject markdown:

<!--- @@inject-code: example.md --->

\`\`\`markdown
# Example

This is an example bit of markdown.

- first
- second
- third
\`\`\`

<!--- @@inject-end: example.md --->

<!--- @@inject-code: example2.md --->

\`\`\`markdown
---
title: Example 2
description: 'An example with Frontmatter'
permalink: /
---

# Contains special characters

## How it works with camelCase

The concept is simple, split camelCase words before checking them against a list of known English words.

- camelCase -> camel case
- HTMLInput -> html input -- Notice that the \`I\` is associated with \`Input\` and not \`HTML\`
- snake_case_words -> snake case words
- camel2snake -> camel snake -- (the 2 is ignored)
\`\`\`

<!--- @@inject-end: example2.md --->
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/code/frontmatter.md' {} 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/code/frontmatter.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/headers/README.md' {} 1`] = `
[
  [
    "fixtures/headers/README.md",
    "# Injecting Headers

<!--- @@inject: content.md#Nested --->

### Nested

This is nested under Section 1

<!--- @@inject-end: content.md#Nested --->

<!--- @@inject: content.md#heading=Nested&L11-L99 --->

### Nested

This is nested under Section 3

<!--- @@inject-end: content.md#heading=Nested&L11-L99 --->

<!--- @@inject: content.md#Nested&L11-L99 --->

### Nested

This is nested under Section 3

<!--- @@inject-end: content.md#Nested&L11-L99 --->

<!--- @@inject: content.md#Missing --->

<!--- header: "Missing" not found.  --->

<!--- @@inject-end: content.md#Missing --->
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/headers/README.md' {} 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/headers/README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/inject-only/README.md' { injectOnly: true } 1`] = `
[
  [
    "fixtures/inject-only/README.md",
    "Inject Only
===========

This document is deliberately formatted in ways that a whole-document
re-stringify normalizes (setext heading, extra blank lines, an unusual
list marker), to check that \`--inject-only\` leaves everything outside the
injected span byte-for-byte untouched.


There are two blank lines above this paragraph.

* Item one
* Item two

<!--- @@inject: snippet.md --->

Injected content.

<!--- @@inject-end: snippet.md --->
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/inject-only/README.md' { injectOnly: true } 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/inject-only/README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/quotes/README.md' {} 1`] = `
[
  [
    "fixtures/quotes/README.md",
    "# Block Quotes

It is possible to Block Quote injected content.

\`\`\`markdown
<!--- @@inject: include.md#heading=Section 2&quote --->
\`\`\`

<!--- @@inject: include.md#Section 2&quote --->

> ## Section 2
>
> This is section 2 and its content.
>
> - One
> - Two
> - Three
>
> \`\`\`json
> { "debug": true }
> \`\`\`

<!--- @@inject-end: include.md#Section 2&quote --->

<!--- @@inject: include.md#Section 2&quote&code --->

> \`\`\`\`markdown
> ## Section 2
>
> This is section 2 and its content.
>
> * One
> * Two
> * Three
>
> \`\`\`json
> { "debug": true }
> \`\`\`
> \`\`\`\`

<!--- @@inject-end: include.md#Section 2&quote&code --->

<!--- @@inject: include.md#L13-L18&quote --->

> This is section 2 and its content.
>
> - One
> - Two
> - Three

<!--- @@inject-end: include.md#L13-L18&quote --->

<!--- @@inject: include.md#heading=Nested&L22-L31&quote --->

> ### Nested
>
> This is nested under Section 3

<!--- @@inject-end: include.md#heading=Nested&L22-L31&quote --->
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/quotes/README.md' {} 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/quotes/README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/relative-links/README.md' { outputDir: '_out_' } 1`] = `
[
  [
    "_out_/fixtures/relative-links/README.md",
    "# Relative links

Rebased by default:

<!--- @@inject: docs/part.md --->

## Part

- Image: ![flow](docs/img/flow.png)
- Link: [guide](docs/guide.md#install)
- Up: [license](LICENSE)
- Back to the host: [usage](README.md#usage)
- Reference: [ref][ref]
- Absolute: [site](https://example.com/x.md)
- Root-relative: [root](/docs/x.md)
- Fragment: [part](#part)
- Raw HTML: <img src="img/raw.png">

[ref]: docs/other.md "Other"

<!--- @@inject-end: docs/part.md --->

Opted out:

<!--- @@inject: docs/part.md#rebase-links=false --->

## Part

- Image: ![flow](img/flow.png)
- Link: [guide](./guide.md#install)
- Up: [license](../LICENSE)
- Back to the host: [usage](../README.md#usage)
- Reference: [ref][ref]
- Absolute: [site](https://example.com/x.md)
- Root-relative: [root](/docs/x.md)
- Fragment: [part](#part)
- Raw HTML: <img src="img/raw.png">

[ref]: other.md "Other"

<!--- @@inject-end: docs/part.md#rebase-links=false --->

Opted in explicitly, which wins over \`--no-rebase-links\`:

<!--- @@inject: docs/part.md#rebase-links --->

## Part

- Image: ![flow](docs/img/flow.png)
- Link: [guide](docs/guide.md#install)
- Up: [license](LICENSE)
- Back to the host: [usage](README.md#usage)
- Reference: [ref][ref]
- Absolute: [site](https://example.com/x.md)
- Root-relative: [root](/docs/x.md)
- Fragment: [part](#part)
- Raw HTML: <img src="img/raw.png">

[ref]: docs/other.md "Other"

<!--- @@inject-end: docs/part.md#rebase-links --->

Shown as code, never rebased:

<!--- @@inject: docs/part.md#code --->

\`\`\`markdown
## Part

* Image: ![flow](img/flow.png)
* Link: [guide](./guide.md#install)
* Up: [license](../LICENSE)
* Back to the host: [usage](../README.md#usage)
* Reference: [ref][ref]
* Absolute: [site](https://example.com/x.md)
* Root-relative: [root](/docs/x.md)
* Fragment: [part](#part)
* Raw HTML: <img src="img/raw.png">

[ref]: other.md "Other"
\`\`\`

<!--- @@inject-end: docs/part.md#code --->

As a quote:

<!--- @@inject: docs/part.md#quote --->

> ## Part
>
> - Image: ![flow](docs/img/flow.png)
> - Link: [guide](docs/guide.md#install)
> - Up: [license](LICENSE)
> - Back to the host: [usage](README.md#usage)
> - Reference: [ref][ref]
> - Absolute: [site](https://example.com/x.md)
> - Root-relative: [root](/docs/x.md)
> - Fragment: [part](#part)
> - Raw HTML: <img src="img/raw.png">
>
> [ref]: docs/other.md "Other"

<!--- @@inject-end: docs/part.md#quote --->

Table cells:

<!--- @@inject: docs/links.csv#markdown --->

| Name  | Link                       |
| ----- | -------------------------- |
| Guide | [guide](docs/guide.md)     |
| Image | ![flow](docs/img/flow.png) |

<!--- @@inject-end: docs/links.csv#markdown --->

<!--- @@inject: docs/links.csv#html-table --->

<table>
<thead>
<tr>
<th>Name</th>
<th>Link</th>
</tr>
</thead>
<tbody>
<tr>
<td>Guide</td>
<td>

[guide](docs/guide.md)

</td>
</tr>
<tr>
<td>Image</td>
<td>

![flow](docs/img/flow.png)

</td>
</tr>
</tbody>
</table>

<!--- @@inject-end: docs/links.csv#html-table --->

<!--- @@inject: docs/links.csv --->

| Name  | Link                     |
| ----- | ------------------------ |
| Guide | \\[guide]\\(guide.md)      |
| Image | !\\[flow]\\(img/flow\\.png) |

<!--- @@inject-end: docs/links.csv --->

JSON table cells:

<!--- @@inject-table: docs/links.json#markdown --->

| Name  | Link                   | Meta                      |
| ----- | ---------------------- | ------------------------- |
| Guide | [guide](docs/guide.md) |                           |
| Data  | [data](data/x.csv)     | \`{"see":"[raw](raw.md)"}\` |

<!--- @@inject-end: docs/links.json#markdown --->

Same directory, left as written:

<!--- @@inject: sibling.md --->

See [notes](./notes/a/../b.md).

<!--- @@inject-end: sibling.md --->
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/relative-links/README.md' { outputDir: '_out_' } 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/relative-links/README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/relative-links/README.md' { rebaseLinks: false } 1`] = `
[
  [
    "fixtures/relative-links/README.md",
    "# Relative links

Rebased by default:

<!--- @@inject: docs/part.md --->

## Part

- Image: ![flow](img/flow.png)
- Link: [guide](./guide.md#install)
- Up: [license](../LICENSE)
- Back to the host: [usage](../README.md#usage)
- Reference: [ref][ref]
- Absolute: [site](https://example.com/x.md)
- Root-relative: [root](/docs/x.md)
- Fragment: [part](#part)
- Raw HTML: <img src="img/raw.png">

[ref]: other.md "Other"

<!--- @@inject-end: docs/part.md --->

Opted out:

<!--- @@inject: docs/part.md#rebase-links=false --->

## Part

- Image: ![flow](img/flow.png)
- Link: [guide](./guide.md#install)
- Up: [license](../LICENSE)
- Back to the host: [usage](../README.md#usage)
- Reference: [ref][ref]
- Absolute: [site](https://example.com/x.md)
- Root-relative: [root](/docs/x.md)
- Fragment: [part](#part)
- Raw HTML: <img src="img/raw.png">

[ref]: other.md "Other"

<!--- @@inject-end: docs/part.md#rebase-links=false --->

Opted in explicitly, which wins over \`--no-rebase-links\`:

<!--- @@inject: docs/part.md#rebase-links --->

## Part

- Image: ![flow](docs/img/flow.png)
- Link: [guide](docs/guide.md#install)
- Up: [license](LICENSE)
- Back to the host: [usage](README.md#usage)
- Reference: [ref][ref]
- Absolute: [site](https://example.com/x.md)
- Root-relative: [root](/docs/x.md)
- Fragment: [part](#part)
- Raw HTML: <img src="img/raw.png">

[ref]: docs/other.md "Other"

<!--- @@inject-end: docs/part.md#rebase-links --->

Shown as code, never rebased:

<!--- @@inject: docs/part.md#code --->

\`\`\`markdown
## Part

* Image: ![flow](img/flow.png)
* Link: [guide](./guide.md#install)
* Up: [license](../LICENSE)
* Back to the host: [usage](../README.md#usage)
* Reference: [ref][ref]
* Absolute: [site](https://example.com/x.md)
* Root-relative: [root](/docs/x.md)
* Fragment: [part](#part)
* Raw HTML: <img src="img/raw.png">

[ref]: other.md "Other"
\`\`\`

<!--- @@inject-end: docs/part.md#code --->

As a quote:

<!--- @@inject: docs/part.md#quote --->

> ## Part
>
> - Image: ![flow](img/flow.png)
> - Link: [guide](./guide.md#install)
> - Up: [license](../LICENSE)
> - Back to the host: [usage](../README.md#usage)
> - Reference: [ref][ref]
> - Absolute: [site](https://example.com/x.md)
> - Root-relative: [root](/docs/x.md)
> - Fragment: [part](#part)
> - Raw HTML: <img src="img/raw.png">
>
> [ref]: other.md "Other"

<!--- @@inject-end: docs/part.md#quote --->

Table cells:

<!--- @@inject: docs/links.csv#markdown --->

| Name  | Link                  |
| ----- | --------------------- |
| Guide | [guide](guide.md)     |
| Image | ![flow](img/flow.png) |

<!--- @@inject-end: docs/links.csv#markdown --->

<!--- @@inject: docs/links.csv#html-table --->

<table>
<thead>
<tr>
<th>Name</th>
<th>Link</th>
</tr>
</thead>
<tbody>
<tr>
<td>Guide</td>
<td>

[guide](guide.md)

</td>
</tr>
<tr>
<td>Image</td>
<td>

![flow](img/flow.png)

</td>
</tr>
</tbody>
</table>

<!--- @@inject-end: docs/links.csv#html-table --->

<!--- @@inject: docs/links.csv --->

| Name  | Link                     |
| ----- | ------------------------ |
| Guide | \\[guide]\\(guide.md)      |
| Image | !\\[flow]\\(img/flow\\.png) |

<!--- @@inject-end: docs/links.csv --->

JSON table cells:

<!--- @@inject-table: docs/links.json#markdown --->

| Name  | Link                  | Meta                      |
| ----- | --------------------- | ------------------------- |
| Guide | [guide](guide.md)     |                           |
| Data  | [data](../data/x.csv) | \`{"see":"[raw](raw.md)"}\` |

<!--- @@inject-end: docs/links.json#markdown --->

Same directory, left as written:

<!--- @@inject: sibling.md --->

See [notes](./notes/a/../b.md).

<!--- @@inject-end: sibling.md --->
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/relative-links/README.md' { rebaseLinks: false } 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/relative-links/README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/relative-links/README.md' {} 1`] = `
[
  [
    "fixtures/relative-links/README.md",
    "# Relative links

Rebased by default:

<!--- @@inject: docs/part.md --->

## Part

- Image: ![flow](docs/img/flow.png)
- Link: [guide](docs/guide.md#install)
- Up: [license](LICENSE)
- Back to the host: [usage](README.md#usage)
- Reference: [ref][ref]
- Absolute: [site](https://example.com/x.md)
- Root-relative: [root](/docs/x.md)
- Fragment: [part](#part)
- Raw HTML: <img src="img/raw.png">

[ref]: docs/other.md "Other"

<!--- @@inject-end: docs/part.md --->

Opted out:

<!--- @@inject: docs/part.md#rebase-links=false --->

## Part

- Image: ![flow](img/flow.png)
- Link: [guide](./guide.md#install)
- Up: [license](../LICENSE)
- Back to the host: [usage](../README.md#usage)
- Reference: [ref][ref]
- Absolute: [site](https://example.com/x.md)
- Root-relative: [root](/docs/x.md)
- Fragment: [part](#part)
- Raw HTML: <img src="img/raw.png">

[ref]: other.md "Other"

<!--- @@inject-end: docs/part.md#rebase-links=false --->

Opted in explicitly, which wins over \`--no-rebase-links\`:

<!--- @@inject: docs/part.md#rebase-links --->

## Part

- Image: ![flow](docs/img/flow.png)
- Link: [guide](docs/guide.md#install)
- Up: [license](LICENSE)
- Back to the host: [usage](README.md#usage)
- Reference: [ref][ref]
- Absolute: [site](https://example.com/x.md)
- Root-relative: [root](/docs/x.md)
- Fragment: [part](#part)
- Raw HTML: <img src="img/raw.png">

[ref]: docs/other.md "Other"

<!--- @@inject-end: docs/part.md#rebase-links --->

Shown as code, never rebased:

<!--- @@inject: docs/part.md#code --->

\`\`\`markdown
## Part

* Image: ![flow](img/flow.png)
* Link: [guide](./guide.md#install)
* Up: [license](../LICENSE)
* Back to the host: [usage](../README.md#usage)
* Reference: [ref][ref]
* Absolute: [site](https://example.com/x.md)
* Root-relative: [root](/docs/x.md)
* Fragment: [part](#part)
* Raw HTML: <img src="img/raw.png">

[ref]: other.md "Other"
\`\`\`

<!--- @@inject-end: docs/part.md#code --->

As a quote:

<!--- @@inject: docs/part.md#quote --->

> ## Part
>
> - Image: ![flow](docs/img/flow.png)
> - Link: [guide](docs/guide.md#install)
> - Up: [license](LICENSE)
> - Back to the host: [usage](README.md#usage)
> - Reference: [ref][ref]
> - Absolute: [site](https://example.com/x.md)
> - Root-relative: [root](/docs/x.md)
> - Fragment: [part](#part)
> - Raw HTML: <img src="img/raw.png">
>
> [ref]: docs/other.md "Other"

<!--- @@inject-end: docs/part.md#quote --->

Table cells:

<!--- @@inject: docs/links.csv#markdown --->

| Name  | Link                       |
| ----- | -------------------------- |
| Guide | [guide](docs/guide.md)     |
| Image | ![flow](docs/img/flow.png) |

<!--- @@inject-end: docs/links.csv#markdown --->

<!--- @@inject: docs/links.csv#html-table --->

<table>
<thead>
<tr>
<th>Name</th>
<th>Link</th>
</tr>
</thead>
<tbody>
<tr>
<td>Guide</td>
<td>

[guide](docs/guide.md)

</td>
</tr>
<tr>
<td>Image</td>
<td>

![flow](docs/img/flow.png)

</td>
</tr>
</tbody>
</table>

<!--- @@inject-end: docs/links.csv#html-table --->

<!--- @@inject: docs/links.csv --->

| Name  | Link                     |
| ----- | ------------------------ |
| Guide | \\[guide]\\(guide.md)      |
| Image | !\\[flow]\\(img/flow\\.png) |

<!--- @@inject-end: docs/links.csv --->

JSON table cells:

<!--- @@inject-table: docs/links.json#markdown --->

| Name  | Link                   | Meta                      |
| ----- | ---------------------- | ------------------------- |
| Guide | [guide](docs/guide.md) |                           |
| Data  | [data](data/x.csv)     | \`{"see":"[raw](raw.md)"}\` |

<!--- @@inject-end: docs/links.json#markdown --->

Same directory, left as written:

<!--- @@inject: sibling.md --->

See [notes](./notes/a/../b.md).

<!--- @@inject-end: sibling.md --->
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/relative-links/README.md' {} 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/relative-links/README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/style-preserve/README.md' {} 1`] = `
[
  [
    "fixtures/style-preserve/README.md",
    "# Style Preserve

This document is written with a non-default Markdown style, to check
that inject-markdown does not rewrite it when injecting content elsewhere
in the file.

* Item one
* Item two

Some *emphasis* and __strong__ text.

~~~js
const a = 1;
~~~

***

<!--- @@inject: snippet.md --->

Injected content.

<!--- @@inject-end: snippet.md --->
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/style-preserve/README.md' {} 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/style-preserve/README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/tables/README.md' {} 1`] = `
[
  [
    "fixtures/tables/README.md",
    "# Tables

## Default CSV injection becomes a table

<!--- @@inject: sample.csv --->

| name  | age | city            |
| ----- | --- | --------------- |
| Alice | 30  | New York        |
| Bob   | 25  | Los Angeles, CA |

<!--- @@inject-end: sample.csv --->

## Default TSV injection becomes a table

<!--- @@inject: sample.tsv --->

| name   | color |
| ------ | ----- |
| Widget | Red   |
| Gadget | Blue  |

<!--- @@inject-end: sample.tsv --->

## Explicit \`@@inject-table\` directive

<!--- @@inject-table: sample.csv --->

| name  | age | city            |
| ----- | --- | --------------- |
| Alice | 30  | New York        |
| Bob   | 25  | Los Angeles, CA |

<!--- @@inject-end: sample.csv --->

## \`@@inject-code\` forces a code block

<!--- @@inject-code: sample.csv --->

\`\`\`csv
name,age,city
Alice,30,New York
Bob,25,"Los Angeles, CA"
\`\`\`

<!--- @@inject-end: sample.csv --->

## \`#lang=csv\` forces a code block

<!--- @@inject: sample.csv#lang=csv --->

\`\`\`csv
name,age,city
Alice,30,New York
Bob,25,"Los Angeles, CA"
\`\`\`

<!--- @@inject-end: sample.csv#lang=csv --->

## \`#markdown\` renders inline Markdown in cells

<!--- @@inject: markdown.csv#markdown&values=name:*draft* --->

| Option        | Description                                                                     | Default  |
| ------------- | ------------------------------------------------------------------------------- | -------- |
| **\`columns\`** | Pick columns, e.g. \`a\\|b\` or a \\| b                                             | _all_    |
| \`#markdown\`   | See [ADR-0008](../../docs/ADRs/table-improvements/0008-table-markdown-cells.md) | ~~off~~  |
| # Title       | - item stays literal                                                            | 1. first |
| <sup>1</sup>  | line one<br />line two                                                          | > note   |
| plain         | has _draft_                                                                     |          |

<!--- @@inject-end: markdown.csv#markdown&values=name:*draft* --->

## Without \`#markdown\` the same cells are literal

<!--- @@inject: markdown.csv --->

| Option              | Description                                                                       | Default     |
| ------------------- | --------------------------------------------------------------------------------- | ----------- |
| \\*\\*\\\`columns\\\`\\*\\* | Pick columns, e.g. \\\`a\\|b\\\` or a \\| b                                             | \\_all\\_     |
| \\\`#markdown\\\`       | See \\[ADR-0008]\\(../../docs/ADRs/table-improvements/0008-table-markdown-cells.md) | \\~\\~off\\~\\~ |
| # Title             | - item stays literal                                                              | 1. first    |
| \\<sup>1\\</sup>      | line one&#xA;line two                                                             | > note      |
| plain               | has {@ name @}                                                                    |             |

<!--- @@inject-end: markdown.csv --->

## \`#html-table\` emits an HTML table with Markdown cells

<!--- @@inject: html-table.csv#html-table --->

<table>
<thead>
<tr>
<th>Name</th>
<th>Notes</th>
<th>Count</th>
</tr>
</thead>
<tbody>
<tr>
<td>plain</td>
<td>a &lt; b &amp; c</td>
<td>42</td>
</tr>
<tr>
<td>

**bold**

</td>
<td>

**new**

- a
- b

</td>
<td>

\`7\`

</td>
</tr>
<tr>
<td>empty</td>
<td></td>
<td>

line one
line two

</td>
</tr>
<tr>
<td>pipe</td>
<td>a | b</td>
<td></td>
</tr>
</tbody>
</table>

<!--- @@inject-end: html-table.csv#html-table --->

## \`#html-table\` wins over \`#markdown\`

<!--- @@inject: markdown.csv#markdown&html-table --->

<table>
<thead>
<tr>
<th>Option</th>
<th>Description</th>
<th>Default</th>
</tr>
</thead>
<tbody>
<tr>
<td>

**\`columns\`**

</td>
<td>

Pick columns, e.g. \`a|b\` or a | b

</td>
<td>

_all_

</td>
</tr>
<tr>
<td>

\`#markdown\`

</td>
<td>

See [ADR-0008](../../docs/ADRs/table-improvements/0008-table-markdown-cells.md)

</td>
<td>

~~off~~

</td>
</tr>
<tr>
<td>

# Title

</td>
<td>

- item stays literal

</td>
<td>

1. first

</td>
</tr>
<tr>
<td>

<sup>1</sup>

</td>
<td>

line one
line two

</td>
<td>

> note

</td>
</tr>
<tr>
<td>plain</td>
<td>has {@ name @}</td>
<td></td>
</tr>
</tbody>
</table>

<!--- @@inject-end: markdown.csv#markdown&html-table --->

## Row window: \`start-row=2&num-rows=2\`

<!--- @@inject: rows.csv#start-row=2&num-rows=2 --->

| n | name  |
| - | ----- |
| 2 | two   |
| 3 | three |

<!--- @@inject-end: rows.csv#start-row=2&num-rows=2 --->

## Row window: \`end-row=2\`

<!--- @@inject: rows.csv#end-row=2 --->

| n | name |
| - | ---- |
| 1 | one  |
| 2 | two  |

<!--- @@inject-end: rows.csv#end-row=2 --->

## Row window past the end is a header-only table

<!--- @@inject: rows.csv#start-row=100 --->

| n | name |
| - | ---- |

<!--- @@inject-end: rows.csv#start-row=100 --->

## JSON table source

<!--- @@inject-table: people.json#values=version:1.0 --->

| name  | born | tags               | meta        | role            | active | note |
| ----- | ---- | ------------------ | ----------- | --------------- | ------ | ---- |
| Ada   | 1815 | \\["math","poetry"] | {"v":"1.0"} |                 |        |      |
| Grace |      |                    |             | Admiral \\| Navy | true   |      |
| Linus | 1969 |                    |             |                 |        |      |

<!--- @@inject-end: people.json#values=version:1.0 --->

## JSON table source with \`#markdown\`

<!--- @@inject-table: people.json#markdown&values=version:1.0 --->

| name  | born | tags                | meta          | role            | active | note |
| ----- | ---- | ------------------- | ------------- | --------------- | ------ | ---- |
| Ada   | 1815 | \`["math","poetry"]\` | \`{"v":"1.0"}\` |                 |        |      |
| Grace |      |                     |               | Admiral \\| Navy | true   |      |
| Linus | 1969 |                     |               |                 |        |      |

<!--- @@inject-end: people.json#markdown&values=version:1.0 --->

## JSON table source with \`#html-table\`

<!--- @@inject-table: people.json#html-table&values=version:1.0 --->

<table>
<thead>
<tr>
<th>name</th>
<th>born</th>
<th>tags</th>
<th>meta</th>
<th>role</th>
<th>active</th>
<th>note</th>
</tr>
</thead>
<tbody>
<tr>
<td>Ada</td>
<td>1815</td>
<td>

\`\`\`json
[
  "math",
  "poetry"
]
\`\`\`

</td>
<td>

\`\`\`json
{
  "v": "1.0"
}
\`\`\`

</td>
<td></td>
<td></td>
<td></td>
</tr>
<tr>
<td>Grace</td>
<td></td>
<td></td>
<td></td>
<td>Admiral | Navy</td>
<td>true</td>
<td></td>
</tr>
<tr>
<td>Linus</td>
<td>1969</td>
<td></td>
<td></td>
<td></td>
<td></td>
<td></td>
</tr>
</tbody>
</table>

<!--- @@inject-end: people.json#html-table&values=version:1.0 --->

## JSON columns come from the row window

<!--- @@inject-table: people.json#start-row=2&end-row=2 --->

| name  | role            | active | note |
| ----- | --------------- | ------ | ---- |
| Grace | Admiral \\| Navy | true   |      |

<!--- @@inject-end: people.json#start-row=2&end-row=2 --->

## JSON window past the end keeps a header of all keys

<!--- @@inject-table: people.json#start-row=100 --->

| name | born | tags | meta | role | active | note |
| ---- | ---- | ---- | ---- | ---- | ------ | ---- |

<!--- @@inject-end: people.json#start-row=100 --->

## Two header rows: \`header-rows=2\`

<!--- @@inject: grouped.csv#header-rows=2 --->

| Date       | Name<br />First | Name<br />Last | Value |
| ---------- | --------------- | -------------- | ----- |
| 2024-01-01 | Ada             | Lovelace       | 1     |
| 2024-01-02 | Grace           | Hopper         | 2     |

<!--- @@inject-end: grouped.csv#header-rows=2 --->

## Two header rows in an HTML table

<!--- @@inject: grouped.csv#header-rows=2&html-table --->

<table>
<thead>
<tr>
<th>Date</th>
<th>Name</th>
<th>Name</th>
<th>Value</th>
</tr>
<tr>
<th></th>
<th>First</th>
<th>Last</th>
<th></th>
</tr>
</thead>
<tbody>
<tr>
<td>2024-01-01</td>
<td>Ada</td>
<td>Lovelace</td>
<td>1</td>
</tr>
<tr>
<td>2024-01-02</td>
<td>Grace</td>
<td>Hopper</td>
<td>2</td>
</tr>
</tbody>
</table>

<!--- @@inject-end: grouped.csv#header-rows=2&html-table --->

## Header rows and the row window: \`header-rows=2&start-row=2\`

<!--- @@inject: grouped.csv#header-rows=2&start-row=2 --->

| Date       | Name<br />First | Name<br />Last | Value |
| ---------- | --------------- | -------------- | ----- |
| 2024-01-02 | Grace           | Hopper         | 2     |

<!--- @@inject-end: grouped.csv#header-rows=2&start-row=2 --->

## No header row: \`header-rows=0\`

<!--- @@inject: rows.csv#header-rows=0&num-rows=2 --->

| 1 | 2    |
| - | ---- |
| n | name |
| 1 | one  |

<!--- @@inject-end: rows.csv#header-rows=0&num-rows=2 --->

## No header row in an HTML table

<!--- @@inject: rows.csv#header-rows=0&num-rows=2&html-table --->

<table>
<tbody>
<tr>
<td>n</td>
<td>name</td>
</tr>
<tr>
<td>1</td>
<td>one</td>
</tr>
</tbody>
</table>

<!--- @@inject-end: rows.csv#header-rows=0&num-rows=2&html-table --->

## More header rows than the file has: all header, no data

<!--- @@inject: grouped.csv#header-rows=9 --->

| Date<br />2024-01-01<br />2024-01-02 | Name<br />First<br />Ada<br />Grace | Name<br />Last<br />Lovelace<br />Hopper | Value<br />1<br />2 |
| ------------------------------------ | ----------------------------------- | ---------------------------------------- | ------------------- |

<!--- @@inject-end: grouped.csv#header-rows=9 --->

## JSON with \`header-rows=0\` drops the key header

<!--- @@inject-table: people.json#header-rows=0&end-row=2 --->

| 1     | 2    | 3                  | 4                     | 5               | 6    | 7 |
| ----- | ---- | ------------------ | --------------------- | --------------- | ---- | - |
| Ada   | 1815 | \\["math","poetry"] | {"v":"{@ version @}"} |                 |      |   |
| Grace |      |                    |                       | Admiral \\| Navy | true |   |

<!--- @@inject-end: people.json#header-rows=0&end-row=2 --->

## No header row and a window past the end: numbered header, no data

<!--- @@inject: rows.csv#header-rows=0&start-row=100 --->

| 1 | 2 |
| - | - |

<!--- @@inject-end: rows.csv#header-rows=0&start-row=100 --->

## JSON with no key header and a window past the end: numbered columns, no data

<!--- @@inject-table: people.json#header-rows=0&start-row=100 --->

| 1 | 2 | 3 | 4 | 5 | 6 | 7 |
| - | - | - | - | - | - | - |

<!--- @@inject-end: people.json#header-rows=0&start-row=100 --->
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/tables/README.md' {} 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/tables/README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_' } 1`] = `
[
  [
    "_out_/fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

- Prices
  <!--- @@inject: parts/prices.md --->
  ## Data
  | Name             | City      | Cost   |
  | ---------------- | --------- | ------ |
  | Parade of Lights | Amsterdam | €100/p |
  | Disney World     | Orlando   | $200/p |
  <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_' } 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/vacations/vacations.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_', silent: true } 1`] = `
[
  [
    "_out_/fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

- Prices
  <!--- @@inject: parts/prices.md --->
  ## Data
  | Name             | City      | Cost   |
  | ---------------- | --------- | ------ |
  | Parade of Lights | Amsterdam | €100/p |
  | Disney World     | Orlando   | $200/p |
  <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_', silent: true } 2`] = `[]`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_', verbose: true } 1`] = `
[
  [
    "_out_/fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

- Prices
  <!--- @@inject: parts/prices.md --->
  ## Data
  | Name             | City      | Cost   |
  | ---------------- | --------- | ------ |
  | Parade of Lights | Amsterdam | €100/p |
  | Disney World     | Orlando   | $200/p |
  <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_', verbose: true } 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/vacations/vacations.md ...",
  },
  {
    "target": "stderr",
    "text": "
  parts/destinations.md",
  },
  {
    "target": "stderr",
    "text": "
  parts/prices.md",
  },
  {
    "target": "stderr",
    "text": "
  parts/destinations.md#Amsterdam",
  },
  {
    "target": "stderr",
    "text": "
  parts/code.md",
  },
  {
    "target": "stderr",
    "text": "
  done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' {} 1`] = `
[
  [
    "fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

- Prices
  <!--- @@inject: parts/prices.md --->
  ## Data
  | Name             | City      | Cost   |
  | ---------------- | --------- | ------ |
  | Parade of Lights | Amsterdam | €100/p |
  | Disney World     | Orlando   | $200/p |
  <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' {} 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/vacations/vacations.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'vacations.md' { cwd: 'fixtures/vacations/', …(1) } 1`] = `
[
  [
    "_out_/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

- Prices
  <!--- @@inject: parts/prices.md --->
  ## Data
  | Name             | City      | Cost   |
  | ---------------- | --------- | ------ |
  | Parade of Lights | Amsterdam | €100/p |
  | Disney World     | Orlando   | $200/p |
  <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'vacations.md' { cwd: 'fixtures/vacations/', …(1) } 2`] = `
[
  {
    "target": "stderr",
    "text": "vacations.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile('fixtures/vacations/vacations.md', { outputDir: '_out_' }) 1`] = `
[
  [
    "_out_/fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

- Prices
  <!--- @@inject: parts/prices.md --->
  ## Data
  | Name             | City      | Cost   |
  | ---------------- | --------- | ------ |
  | Parade of Lights | Amsterdam | €100/p |
  | Disney World     | Orlando   | $200/p |
  <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile('fixtures/vacations/vacations.md', { outputDir: '_out_' }) 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/vacations/vacations.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile('fixtures/vacations/vacations.md', { outputDir: '_out_', dryRun: true }) 1`] = `[]`;

exports[`FileInjector > processFile('fixtures/vacations/vacations.md', { outputDir: '_out_', dryRun: true }) 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/vacations/vacations.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;
